{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 91,
  "lineage": "556421e6-8733-d79d-6994-9f13fea8f2e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linuxvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-f9fa4183",
            "arn": "arn:aws:ec2:us-east-1:728643735238:instance/i-0e60856ba0b3c4604",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e60856ba0b3c4604",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TBSTools-ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-057bc8762d605a501",
            "private_dns": "ip-10-10-3-167.ec2.internal",
            "private_ip": "10.10.3.167",
            "public_dns": "ec2-44-203-99-165.compute-1.amazonaws.com",
            "public_ip": "44.203.99.165",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-02740f64e456bea83",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a925348ebb91e5f7",
            "tags": {
              "Name": "TBSTools-instance-0"
            },
            "tags_all": {
              "Name": "TBSTools-instance-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ee950bc8c4b256c4"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.lxwebservers",
            "aws_subnet.subnets",
            "aws_vpc.vpc01",
            "data.aws_ami.centos7",
            "data.aws_subnet_ids.allsubnets",
            "tls_private_key.privatekey"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-f9fa4183",
            "arn": "arn:aws:ec2:us-east-1:728643735238:instance/i-0f55c92e59928eb0d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f55c92e59928eb0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TBSTools-ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-042fbeef000de0bcc",
            "private_dns": "ip-10-10-2-23.ec2.internal",
            "private_ip": "10.10.2.23",
            "public_dns": "ec2-3-238-34-9.compute-1.amazonaws.com",
            "public_ip": "3.238.34.9",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0679439b318371032",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2600480b80bbbdf",
            "tags": {
              "Name": "TBSTools-instance-1"
            },
            "tags_all": {
              "Name": "TBSTools-instance-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ee950bc8c4b256c4"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.lxwebservers",
            "aws_subnet.subnets",
            "aws_vpc.vpc01",
            "data.aws_ami.centos7",
            "data.aws_subnet_ids.allsubnets",
            "tls_private_key.privatekey"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-f9fa4183",
            "arn": "arn:aws:ec2:us-east-1:728643735238:instance/i-0330a30aa57566dca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0330a30aa57566dca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TBSTools-ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e3e77a05ad0b827b",
            "private_dns": "ip-10-10-1-86.ec2.internal",
            "private_ip": "10.10.1.86",
            "public_dns": "ec2-54-196-27-162.compute-1.amazonaws.com",
            "public_ip": "54.196.27.162",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0fe2dd8d16fe99a6b",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5cde6dc5f97e98e",
            "tags": {
              "Name": "TBSTools-instance-2"
            },
            "tags_all": {
              "Name": "TBSTools-instance-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ee950bc8c4b256c4"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.lxwebservers",
            "aws_subnet.subnets",
            "aws_vpc.vpc01",
            "data.aws_ami.centos7",
            "data.aws_subnet_ids.allsubnets",
            "tls_private_key.privatekey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728643735238:internet-gateway/igw-0d5ce0f6933d3372e",
            "id": "igw-0d5ce0f6933d3372e",
            "owner_id": "728643735238",
            "tags": {
              "Name": "TBSTools-igw"
            },
            "tags_all": {
              "Name": "TBSTools-igw"
            },
            "vpc_id": "vpc-0dfbe23fa79109dff"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728643735238:route-table/rtb-0e61983f1e8d63030",
            "id": "rtb-0e61983f1e8d63030",
            "owner_id": "728643735238",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d5ce0f6933d3372e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TBSTools-rt"
            },
            "tags_all": {
              "Name": "TBSTools-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfbe23fa79109dff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnetroutes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced06c8677fda8cf",
            "route_table_id": "rtb-0e61983f1e8d63030",
            "subnet_id": "subnet-0a925348ebb91e5f7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt01",
            "aws_subnet.subnets",
            "aws_vpc.vpc01",
            "data.aws_subnet_ids.allsubnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07070b9ddcd6260ca",
            "route_table_id": "rtb-0e61983f1e8d63030",
            "subnet_id": "subnet-0b2600480b80bbbdf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt01",
            "aws_subnet.subnets",
            "aws_vpc.vpc01",
            "data.aws_subnet_ids.allsubnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d773f919bfe110d",
            "route_table_id": "rtb-0e61983f1e8d63030",
            "subnet_id": "subnet-0e5cde6dc5f97e98e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt01",
            "aws_subnet.subnets",
            "aws_vpc.vpc01",
            "data.aws_subnet_ids.allsubnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lxwebservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728643735238:security-group/sg-0ee950bc8c4b256c4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee950bc8c4b256c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TBSTools_lxwebservers",
            "name_prefix": "",
            "owner_id": "728643735238",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-TBSTools-lxwebservers"
            },
            "tags_all": {
              "Name": "sg-TBSTools-lxwebservers"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfbe23fa79109dff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.10.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728643735238:subnet/subnet-0e5cde6dc5f97e98e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5cde6dc5f97e98e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728643735238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TBSTools-subnet0"
            },
            "tags_all": {
              "Name": "TBSTools-subnet0"
            },
            "vpc_id": "vpc-0dfbe23fa79109dff"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        },
        {
          "index_key": "10.10.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728643735238:subnet/subnet-0b2600480b80bbbdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2600480b80bbbdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728643735238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TBSTools-subnet1"
            },
            "tags_all": {
              "Name": "TBSTools-subnet1"
            },
            "vpc_id": "vpc-0dfbe23fa79109dff"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        },
        {
          "index_key": "10.10.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728643735238:subnet/subnet-0a925348ebb91e5f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a925348ebb91e5f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728643735238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TBSTools-subnet2"
            },
            "tags_all": {
              "Name": "TBSTools-subnet2"
            },
            "vpc_id": "vpc-0dfbe23fa79109dff"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728643735238:vpc/vpc-0dfbe23fa79109dff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-070998f4991acf254",
            "default_route_table_id": "rtb-0d73a08d028b953b7",
            "default_security_group_id": "sg-0c7432339b7120757",
            "dhcp_options_id": "dopt-05c577390347d2a12",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dfbe23fa79109dff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d73a08d028b953b7",
            "owner_id": "728643735238",
            "tags": {
              "Name": "TBSTools-vpc"
            },
            "tags_all": {
              "Name": "TBSTools-vpc"
            }
          }
        }
      ]
    }
  ]
}